<resources>
    <string-array name="theme_array">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string name="app_name">ArtWalk</string>
    <string name="title_activity_maps">ArtWalk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="art_walk">Art Walk</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="reload">Reload</string>
</resources>